# vibe-code

./: README.md  setup.sh  start.sh
.trae/documents/: 前端集成文件浏览与编辑功能 (Workspace Integration).md  构建多代理智能开发系统架构 (Multi-Agent Architecture).md
backend/: pyproject.toml
backend/agent_core/agents/: base.py  editor.py  manager.py  verifier.py
backend/agent_core/core/: state.py
backend/agent_core/graph/: workflow.py
backend/agent_core/tools/: browser.py  filesystem.py  server.py
backend/app/: main.py
backend/claude_agent_sdk/agents/: base.py  editor.py  manager.py  verifier.py
backend/claude_agent_sdk/core/: llm.py
backend/claude_agent_sdk/graph/: workflow.py
backend/claude_agent_sdk/tools/: planning.py  server.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CodeEditor.tsx  FileTree.tsx  WorkspacePanel.tsx
