[tool.poetry]
name = "claude-code-agent-sdk"
version = "0.1.0"
description = "Multi-Agent System Core Architecture"
authors = ["Trae Assistant"]
packages = [{include = "claude_agent_sdk"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
langchain = "^0.1.0"
langgraph = "^1.0.0"
langsmith = "^0.1.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
playwright = "^1.41.0"
claude-agent-sdk = "^0.1.0"
duckduckgo-search = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
